Fixed reload recording with UTF-8